--- a/openhcl/minimal_rt/Cargo.toml
+++ b/openhcl/minimal_rt/Cargo.toml
@@ -16,5 +16,8 @@ zerocopy.workspace = true
 [build-dependencies]
 minimal_rt_build.workspace = true
 
+[target.'cfg(target_arch = "x86_64")'.dependencies]
+tdcall.workspace = true
+
 [lints]
 workspace = true
