--- a/vm/loader/manifests/openhcl-x64-cvm-release.json
+++ b/vm/loader/manifests/openhcl-x64-cvm-release.json
@@ -32,7 +32,7 @@
             },
             "image": {
                 "openhcl": {
-                    "command_line": "",
+                    "command_line": "console=ttynull earlyprintk=mshvdbg_tdx,keep  OPENHCL_BOOT_LOG=1",
                     "memory_page_count": 32768,
                     "memory_page_base": 32768,
                     "uefi": true
